# Morningstar

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  returns_analyser.h  returns_helper.h
include/: returns_analyser.h  returns_processor.h
src/: returns_analyser.cpp
tests/: returns_analyser_test.cpp
